--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en" ng-app="clothShopApp">
-  <head>
-    <meta charset="utf-8">
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="js/app.js"></script>
-    <title>Cloth Shop</title>
-  </head>
-  <body>
-    <p>Hello world<p>
+<head>
+  <meta charset="utf-8">
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers/clothShopController.js"></script>
+  <title>Cloth Shop</title>
+</head>
+
+  <body ng-controller="clothShopController as ctrl">
+
   </body>
-</html>
+  </html>
